--- a/quotes/templates/quotes/home.html
+++ b/quotes/templates/quotes/home.html
@@ -7,8 +7,8 @@
 
 <ul>
     {% for quote in all_quotes_list %}
-    <li>"{{quote.text}}" - {{quote.author}} <br>
-        <img src="{{quote.image_url}}" style="max-width: 400">
+    <li><h3>"{{quote.text}}"</h3> - <a href="{% url 'person' quote.person.pk %}"> {{quote.person}} </a> <br>
+        <img src="{{quote.person.get_random_image}}" style="max-width: 400">
     </li>
     {% endfor %}
 </ul>
