--- a/quotes/templates/quotes/quote.html
+++ b/quotes/templates/quotes/quote.html
@@ -5,8 +5,9 @@
 <!-- scriptlist code to display the calue of the variable 'all_quotes_list'
 {{ all_quotes_list }} -->
 
-<h1>"{{quote.text}}"</h1> <h3>- {{quote.author}}</h3> <br>
-<img src="{{quote.image_url}}" style="max-width: 400">
+<h1>"{{quote.text}}"</h1> 
+<h3>- <a href="{% url 'person' quote.person.pk %}"> {{quote.person}} </a></h3> <br>
+<img src="{{quote.person.get_random_image}}" style="max-width: 400;">
 
 </center>
 
