--- a/quotes/templates/quotes/person.html
+++ b/quotes/templates/quotes/person.html
@@ -1,9 +1,19 @@
 <!-- templates/person.html -->
+<html>
+
+{% extends 'quotes/base.html' %}
+
+{% block content %}
+
 <h1>All Quotes by {{person.name}}</h1>
 
 <ul>
     {% for quote in person.get_all_quotes %}
-    <li>{{quote.text}}</li>
+    <li>
+        {{quote.text}} 
+        <a href="{% url 'delete' quote.pk %}">delete</a>
+
+    </li>
     {% endfor %}
 </ul>
 
@@ -14,3 +24,15 @@
     <li><img src='{{images}}' style='width: 200;'></li>
     {% endfor %}
 </ul>
+
+<h2>Upload an Image of {{person.name}}</h2>
+
+<form method="POST" enctype="multipart/form-data" 
+    action="{% url 'add_image' person.pk %}">
+    {% csrf_token %}
+    {{ add_image_form.as_p }}
+    <input type="submit" value="upload">
+</form>
+
+{% endblock %}
+</html>
