--- a/mini_fb/templates/mini_fb/show_all_profiles.html
+++ b/mini_fb/templates/mini_fb/show_all_profiles.html
@@ -1,18 +1,17 @@
-<html>
+{% extends 'mini_fb/base.html' %}
 
-<h1>Mini Facebook Application</h1>
+{% block content %}
 
 <table>
     {% for Profile in all_profiles %}
     <tr>
-        <td>{{Profile.firstN}}</td>
-        <td>{{Profile.lastN}}</td>
+        <td><a href="{% url 'show_profile_page' Profile.pk %}">{{Profile.firstN}} {{Profile.lastN}}</a></td>
         <td>{{Profile.city}}</td>
         <td>{{Profile.email}}</td>
-        <td><img src="{{Profile.image_url}}" height="400px"></td>
+        <td><a href="{% url 'show_profile_page' Profile.pk %}"><img src="{{Profile.image_url}}" height="400px"></a></td>
     </tr>
     {% endfor %}
 </table>
 
+{% endblock %}
 
-</html>
