finished mini_fb application

--- a/mini_fb/templates/mini_fb/show_profile_page.html
+++ b/mini_fb/templates/mini_fb/show_profile_page.html
@@ -17,6 +17,9 @@
     <a href="{% url 'update_profile' profile.pk %}">Update This Profile</a>
 </p>
 
+<p>
+    <h4><a href="{% url 'news_feed' profile.pk %}">{{profile}}'s News Feed</a></h4>
+</p>
 
 <table>
     <tr>
@@ -45,7 +48,7 @@
     <table>
         <tr>
             <td>New Status: {{create_status_form.message}}</td>
-            <td>Image (optional): {{create_status_form.image}}</td>
+            <td>Status Image (optional): {{create_status_form.image}}</td>
         </tr>
         <tr>
             <td>
@@ -56,6 +59,26 @@
     </table>
 </form>
 
+{% if profile.get_friends %}
+
+<h3>{{profile}}'s Friends</h3>
+<table>
+    {% for friend in profile.get_friends %}
+    <tr>
+        <td>
+            <img src='{{friend.image_url}}' width="200px"> 
+        </td>
+        <td>
+            <a href="{% url 'show_profile_page' friend.pk %}"{{friend}}>
+        </td>
+    </tr>
+    {% endfor %}
+    </table>
+{% else %}
+    {{profile.firstN}} doesn't have any friends.
+{% endif %}
+
+<a href ="{% url 'show_possible_friends' profile.pk %}">Add New Friends</a>
 
 </body>
 {% endblock %}
